# transcoder

./: .gitignore  Cargo.toml  dist-workspace.toml  init.sql  init_db.sql
src/: collect.rs  database.rs  ffprobe.rs  main.rs  transcode.rs
