[package]
name = "transcoder"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = "1.1.6"
clap = { version = "4.4.0", features = ["derive"] }
color-eyre = "0.6.2"
console = "0.15.7"
human-repr = "1.1.0"
indicatif = { version = "0.17.6", features = ["rayon"] }
once_cell = "1.18.0"
parking_lot = "0.12.1"
rayon = "1.7.0"
regex = "1.9.3"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
walkdir = "2.3.3"
