[package]
name = "transcoder"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = "1.1.6"
clap = { version = "4.4.6", features = ["derive"] }
color-eyre = "0.6.2"
console = "0.15.7"
human-repr = "1.1.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
once_cell = "1.18.0"
rayon = "1.8.0"
regex = "1.10.2"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tracing = "0.1.39"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
walkdir = "2.4.0"
