[package]
name = "transcoder"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/GyrosOfWar/transcoder"

[dependencies]
camino = { version = "1.1.6", features = ["serde1"] }
clap = { version = "4.4.6", features = ["derive"] }
color-eyre = "0.6.2"
console = "0.15.7"
human-repr = "1.1.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
jiff = { version = "0.2.15", features = ["serde"] }
once_cell = "1.18.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
rayon = "1.8.0"
regex = "1.10.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_rusqlite = "0.40.0"
tabled = "0.20.0"
tracing = "0.1.39"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
walkdir = "2.4.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
